--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,3 +7,90 @@
   year={2023},
   publisher={IEEE}
 }
+
+@article{liebgottmri,
+  title={MRI-Based Response Prediction to Immunotherapy of Late-Stage Melanoma Patients Using Deep Learning},
+  author={Liebgott, Annika and Fay, Louisa and Vu, Viet Chau and Yang, Bin and Gatidis, Sergios}
+}
+
+@inproceedings{fay2024towards,
+  title={Towards causal prediction on Magnetic Resonance Imaging including non-imaging data},
+  author={Fay, Louisa and Marencke, Florian and Yang, Bin and Gatidis, Sergios and Kuestner, Thomas},
+  booktitle={Medical Imaging with Deep Learning},
+  year={2024}
+}
+
+@article{fay2025determinants,
+  title={Determinants of ascending aortic morphology: cross-sectional deep learning-based analysis on 25 073 non-contrast-enhanced NAKO MRI studies},
+  author={Fay, Louisa and Hepp, Tobias and Winkelmann, Moritz T and Peters, Annette and Heier, Margit and Niendorf, Thoralf and Pischon, Tobias and Endemann, Beate and Schulz-Menger, Jeanette and Krist, Lilian and others},
+  journal={European Heart Journal-Cardiovascular Imaging},
+  volume={26},
+  number={5},
+  pages={895--907},
+  year={2025},
+  publisher={Oxford University Press UK}
+}
+
+@inproceedings{muller2024benchmarking,
+  title={Benchmarking dependence measures to prevent shortcut learning in medical imaging},
+  author={M{\"u}ller, Sarah and Fay, Louisa and Koch, Lisa M and Gatidis, Sergios and K{\"u}stner, Thomas and Berens, Philipp},
+  booktitle={International Workshop on Machine Learning in Medical Imaging},
+  pages={53--62},
+  year={2024},
+  organization={Springer Nature Switzerland Cham}
+}
+
+@article{faycausal,
+  title={Causal discovery of morphological changes in thoracic aorta: Investigation on a large epidemiological non-contrast-enhanced MRI cohort},
+  author={Fay, Louisa and Hepp, Tobias and Yang, Bin and Gatidis, Sergios and Kuestner, Thomas}
+}
+
+@inproceedings{fay2025beyond,
+  title={Beyond the Prompt: Deploying Medical Foundation Models on Diverse Chest X-ray Populations},
+  author={Fay, Louisa and Delbrouck, Jean-Benoit and K{\"u}stner, Thomas and Yang, Bin and Codella, Noel C and Lungren, Matthew P and Langlotz, Curtis and Gatidis, Sergios},
+  booktitle={Medical Imaging with Deep Learning},
+  year={2025}
+}
+
+@inproceedings{mottez2025lightweight,
+  title={Lightweight Model Adaptation for Mitigating Bias in Deep Learning Models for Chest X-Ray Analysis},
+  author={Mottez, Clemence and Fay, Louisa and Delbrouck, Jean-Benoit and Langlotz, Curtis},
+  booktitle={Medical Imaging with Deep Learning-Short Papers},
+  year={2025}
+}
+
+@article{moll2025structuring,
+  title={Structuring Radiology Reports: Challenging LLMs with Lightweight Models},
+  author={Moll, Johannes and Fay, Louisa and Azhar, Asfandyar and Ostmeier, Sophie and Lueth, Tim and Gatidis, Sergios and Langlotz, Curtis and Delbrouck, Jean-Benoit},
+  journal={arXiv preprint arXiv:2506.00200},
+  year={2025}
+}
+
+@article{fayclinical,
+  title={Clinical Translation of Deep Learning-based Ascending Aortic Morphology Characterization Using 3D Non-Contrast-enhanced MRA},
+  author={Fay, Louisa and Amsel, Daniel and Ecker, Veronika and Lescan, Mario and H{\"u}lnhagen, Till and Giese, Daniel and Yang, Bin and Gatidis, Sergios and Kuestner, Thomas}
+}
+
+@article{faytowards,
+  title={Towards Deep Learning-Driven Assessment of Lesion Biopsy in Breast MRI},
+  author={Fay, Louisa and Schmidt, Stephanie and Yang, Bin and Winkelmann, Moritz T and Kuestner, Thomas and Peisen, Felix}
+}
+
+@article{faytowards,
+  title={Towards confounding-free and causal predictions: Mitigation of Multiple Spurious Correlations in Deep Learning-Based MRI analysis},
+  author={Fay, Louisa and Reguigui, Hajer and Yang, Bin and Gatidis, Sergios and Kuestner, Thomas}
+}
+
+@article{fayexploration,
+  title={Exploration of Whole-Body Anatomy in the German National Cohort (NAKO): 3D Segmentation of 55 Structures in 28,969 MRI Scans},
+  author={Fay, Louisa and Wang, Qi and Yang, Bin and Kuestner, Thomas and Gatidis, Sergios}
+}
+
+@inproceedings{fay2025mimm,
+  title={MIMM-X: Disentangling Spurious Correlations for Medical Image Analysis},
+  author={Fay, Louisa and Reguigui, Hajer and Yang, Bin and Gatidis, Sergios and K{\"u}stner, Thomas},
+  booktitle={MICCAI Workshop on Fairness of AI in Medical Imaging},
+  pages={94--103},
+  year={2025},
+  organization={Springer Nature Switzerland Cham}
+}
