--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,19 +7,37 @@
   volume={11},
   pages={64070--64086},
   year={2023},
-  publisher={IEEE}
+  publisher={IEEE},
+  preview={MIMM.png},
+  abbr={Causality},
+  html={https://ieeexplore.ieee.org/document/10162210},
+  bibtex_show={true},
+  award={Oral Presenation at ISMRM 2023},
+  award_name={Oral}
 }
 
 @article{liebgottmri,
   title={MRI-Based Response Prediction to Immunotherapy of Late-Stage Melanoma Patients Using Deep Learning},
-  author={Liebgott, Annika and Fay, Louisa and Vu, Viet Chau and Yang, Bin and Gatidis, Sergios}
+  author={Liebgott, Annika and Fay, Louisa and Vu, Viet Chau and Yang, Bin and Gatidis, Sergios},
+  year={2021},
+  award={Magna Cum Laude at ISMRM 2021},
+  award_name={Magna Cum Laude},
+  html={https://ieeexplore.ieee.org/document/10162210},
+  preview={immuno.png},
+  abbr={Immunotherapy},
+  bibtex_show={true},
+
 }
 
 @inproceedings{fay2024towards,
   title={Towards causal prediction on Magnetic Resonance Imaging including non-imaging data},
   author={Fay, Louisa and Marencke, Florian and Yang, Bin and Gatidis, Sergios and Kuestner, Thomas},
   booktitle={Medical Imaging with Deep Learning},
-  year={2024}
+  year={2024},
+  bibtex_show={true},
+  abbr={Causal Prediction},
+  html={https://openreview.net/pdf?id=t5K9gEpDKN},
+  preview={midl24.png},
 }
 
 @article{fay2025determinants,
@@ -30,7 +48,13 @@
   number={5},
   pages={895--907},
   year={2025},
-  publisher={Oxford University Press UK}
+  publisher={Oxford University Press UK},
+  bibtex_show={true},
+  award={Best Oral Presenation (Potchen-Passariello Award) at SMRA 2023},
+  award_name={Best Oral Presentation},
+  html={https://academic.oup.com/ehjcimaging/article-abstract/26/5/895/8062589},
+  preview={Aorta_EHJ.png},
+  abbr={Causal Determinants}
 }
 
 @inproceedings{muller2024benchmarking,
@@ -39,53 +63,78 @@
   booktitle={International Workshop on Machine Learning in Medical Imaging},
   pages={53--62},
   year={2024},
-  organization={Springer Nature Switzerland Cham}
+  organization={Springer Nature Switzerland Cham},
+  bibtex_show={true},
+  abbr={Shortcut Learning},
+  html={https://link.springer.com/chapter/10.1007/978-3-031-73290-4_6},
+  preview={benchmark.png},
 }
 
-@article{faycausal,
-  title={Causal discovery of morphological changes in thoracic aorta: Investigation on a large epidemiological non-contrast-enhanced MRI cohort},
-  author={Fay, Louisa and Hepp, Tobias and Yang, Bin and Gatidis, Sergios and Kuestner, Thomas}
-}
 
 @inproceedings{fay2025beyond,
   title={Beyond the Prompt: Deploying Medical Foundation Models on Diverse Chest X-ray Populations},
   author={Fay, Louisa and Delbrouck, Jean-Benoit and K{\"u}stner, Thomas and Yang, Bin and Codella, Noel C and Lungren, Matthew P and Langlotz, Curtis and Gatidis, Sergios},
   booktitle={Medical Imaging with Deep Learning},
-  year={2025}
+  year={2025},
+  preview={Beyond.png},
+  abbr={Foundation Models},
+  html={hhttps://openreview.net/pdf?id=RuqEg2XAWq},
+  bibtex_show={true},
+  
 }
 
 @inproceedings{mottez2025lightweight,
   title={Lightweight Model Adaptation for Mitigating Bias in Deep Learning Models for Chest X-Ray Analysis},
   author={Mottez, Clemence and Fay, Louisa and Delbrouck, Jean-Benoit and Langlotz, Curtis},
   booktitle={Medical Imaging with Deep Learning-Short Papers},
-  year={2025}
+  year={2025},
+  preview={Bias.png},
+  abbr={Bias Mitigation},
+  html={https://openreview.net/pdf?id=DhgX8IWpki},
+  bibtex_show={true},
 }
 
 @article{moll2025structuring,
   title={Structuring Radiology Reports: Challenging LLMs with Lightweight Models},
   author={Moll, Johannes and Fay, Louisa and Azhar, Asfandyar and Ostmeier, Sophie and Lueth, Tim and Gatidis, Sergios and Langlotz, Curtis and Delbrouck, Jean-Benoit},
-  journal={arXiv preprint arXiv:2506.00200},
-  year={2025}
+  journal={EMNLP},
+  year={2025},
+  bibtex_show={true},
+  abbr={Radiology Reports},
+  html={https://arxiv.org/pdf/2506.00200?},
+  preview={lightweight.png},
 }
 
 @article{fayclinical,
   title={Clinical Translation of Deep Learning-based Ascending Aortic Morphology Characterization Using 3D Non-Contrast-enhanced MRA},
-  author={Fay, Louisa and Amsel, Daniel and Ecker, Veronika and Lescan, Mario and H{\"u}lnhagen, Till and Giese, Daniel and Yang, Bin and Gatidis, Sergios and Kuestner, Thomas}
+  author={Fay, Louisa and Amsel, Daniel and Ecker, Veronika and Lescan, Mario and H{\"u}lnhagen, Till and Giese, Daniel and Yang, Bin and Gatidis, Sergios and Kuestner, Thomas},
+  year={2025},
+  bibtex_show={true},
+  abbr={Deployment},
+  html={https://archive.ismrm.org/2025/3187_UsZe54Q65.html},
+  preview={fire.png},
 }
 
 @article{faytowards,
   title={Towards Deep Learning-Driven Assessment of Lesion Biopsy in Breast MRI},
-  author={Fay, Louisa and Schmidt, Stephanie and Yang, Bin and Winkelmann, Moritz T and Kuestner, Thomas and Peisen, Felix}
-}
-
-@article{faytowards,
-  title={Towards confounding-free and causal predictions: Mitigation of Multiple Spurious Correlations in Deep Learning-Based MRI analysis},
-  author={Fay, Louisa and Reguigui, Hajer and Yang, Bin and Gatidis, Sergios and Kuestner, Thomas}
+  author={Fay, Louisa and Schmidt, Stephanie and Yang, Bin and Winkelmann, Moritz T and Kuestner, Thomas and Peisen, Felix},
+  year={2025},
+  bibtex_show={true},
+  abbr={MR Breast Biopsy},
+  html={https://archive.ismrm.org/2025/4127.html},
+  preview={breast.png},
 }
 
 @article{fayexploration,
   title={Exploration of Whole-Body Anatomy in the German National Cohort (NAKO): 3D Segmentation of 55 Structures in 28,969 MRI Scans},
-  author={Fay, Louisa and Wang, Qi and Yang, Bin and Kuestner, Thomas and Gatidis, Sergios}
+  author={Fay, Louisa and Wang, Qi and Yang, Bin and Kuestner, Thomas and Gatidis, Sergios},
+  year={2025},
+  bibtex_show={true},
+  abbr={Segmentation},
+  html={https://archive.ismrm.org/2025/0254_Jc1g9NQbS.html},
+  preview={totalseg.png},
+  award={Accepted for Oral Presentation at ISMRM 2025},
+  award_name={Oral},
 }
 
 @inproceedings{fay2025mimm,
@@ -94,5 +143,11 @@
   booktitle={MICCAI Workshop on Fairness of AI in Medical Imaging},
   pages={94--103},
   year={2025},
-  organization={Springer Nature Switzerland Cham}
+  organization={Springer Nature Switzerland Cham},
+  bibtex_show={true},
+  abbr={MIMM-X},
+  html={https://arxiv.org/pdf/2506.00200?},
+  preview={mimmx.png},
+  award={Best Oral Presenation at MICCAI FAIMI Workshop 2025},
+  award_name={Best Oral Presentation},
 }
